<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_beforeverification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/sfd_regular"
        android:gravity="center"
        android:text="@string/enter_the_code"
        android:textColor="@color/black_text_color"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/senttotext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfd_regular"
        android:gravity="center"
        android:text="@string/sent_to"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large" />

    <com.chaos.view.PinView
        android:id="@+id/otppin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:cursorColor="@color/colorPrimaryDark"
        app:cursorWidth="2dp"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:itemSpacing="5dp"
        app:itemWidth="36dp"
        app:lineColor="@color/colorAccent"
        app:lineWidth="2px"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_corner_primary_button"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_button"
        android:visibility="visible" />

    <TextView
        android:id="@+id/sendotpagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:fontFamily="@font/sfd_regular"
        android:text="@string/send_otp_again"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_medium"
        android:textStyle="bold" />
</LinearLayout>